[gd_scene load_steps=2 format=3 uid="uid://dgflbrc47cbaa"]

[ext_resource type="Script" path="res://Timers/EnemySpawnTimer.gd" id="1_edafq"]

[node name="EnemySpawnTimer" type="Node2D"]
script = ExtResource("1_edafq")

[node name="InitialTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="SpawnCooldown" type="Timer" parent="."]

[node name="EndSpawnTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="timeout" from="InitialTimer" to="." method="_on_initial_timer_timeout"]
[connection signal="timeout" from="SpawnCooldown" to="." method="_on_spawn_cooldown_timeout"]
[connection signal="timeout" from="EndSpawnTimer" to="." method="_on_end_spawn_timer_timeout"]
